--- a/templates/base.html
+++ b/templates/base.html
@@ -53,8 +53,11 @@
     </body>
 
 <footer>
-    <div>
-        <p>Made by C. Marchena | For educational use</p>
+    <!--            Copy-Rights          -->
+    <div class="footer-copyright text-center py-3 ">
+        <p>Copyright &copy; 2019 All rights reserved | For educational use only | This web page is made by
+            <a target=_blank href="https://www.linkedin.com/in/cindymarchena/ ">C. Marchena</a>
+        </p>
     </div>
 </footer>
 
