--- a/templates/base.html
+++ b/templates/base.html
@@ -1,66 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <title>A Chef's Book</title>
+    <link href="assets/images/favicon.ico" rel="icon" type="image/x-icon" />
+
+    <!-- Bootstrap -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-    <!-- Bootstrap core CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" integrity="sha256-zmfNZmXoNWBMemUOo1XUGFfc0ihGGLYdgtJS3KCr/l0=" crossorigin="anonymous" />
     <!-- Custom Styling -->
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
 </head>
     
-    <body>
-        
-<!-- NavBar -->
-<header>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="sideNav">
-        <!-- Navbar Logo -->
-        <a class="navbar-brand js-trigger" href="#">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="https://res.cloudinary.com/dbnahdjbc/image/upload/c_limit,h_100,w_150/v1571492467/A%20Chefs%20Book/images_lfcgfy.png" alt="Page logo">
-    </a>
+<body>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link js-trigger" href="#">Browser</a></li>
-                <li class="nav-item"><a class="nav-link js-trigger" href="#">Add Recipe</a></li>
-                <li class="nav-item"><a class="nav-link js-trigger" href="#">Edit Recipe</a></li>
-            </ul>
-        </div>
-    </nav>
-</header>
+    <!-- NavBar -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="sideNav">
+            <!-- Navbar Logo -->
+            <a class="navbar-brand js-trigger" href="{{url_for('home_page')}}">
+            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="https://res.cloudinary.com/dbnahdjbc/image/upload/c_limit,h_100,w_150/v1571492467/A%20Chefs%20Book/images_lfcgfy.png" alt="Page logo">
+        </a>
 
-        
-        {% block content %}
-        {% endblock %}
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link js-trigger" href="#">Browser</a></li>
+                    <li class="nav-item"><a class="nav-link js-trigger" href="#">Add Recipe</a></li>
+                    <li class="nav-item"><a class="nav-link js-trigger" href="#">Edit Recipe</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
-<!-- Java Script and jQuery CDN tags -->
-<!-- Bootstrap core JavaScript -->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-<!-- Plugin JavaScript -->
-<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-<!-- Custom scripts  -->
-<script type="text/javascript" src="static/js/interact.js"></script>
-    
-    </body>
 
-<footer>
-    <!--            Copy-Rights          -->
-    <div class="footer-copyright text-center py-3 ">
+    {% block content %} {% endblock %}
+
+
+<!-- Scripts -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js" integrity="sha256-fTuUgtT7O2rqoImwjrhDgbXTKUwyxxujIMRIK7TbuNU=" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
+
+
+
+</body>
+
+<footer class="col-lg-6 offset-lg-4">
+    <!-- Copy-Rights -->
+    <div class="footer-copyright text-center">
         <p>Copyright &copy; 2019 All rights reserved | For educational use only | This web page is made by
             <a target=_blank href="https://www.linkedin.com/in/cindymarchena/ ">C. Marchena</a>
         </p>
     </div>
 </footer>
-
-
-
 </html>
