--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -12,26 +12,26 @@
         <div class="card-body">
             <form action "{{url_for('insert_recipe')}}" method="POST" class="add-recipe-form">
             
-                <div class=" col-12 mt-2">
+                <div class=" col-12 mt-3 mb-5">
                     <!-- Recipe Title -->
-                    <div class="mt-2 md-form form-lg">
-                        <label for="title">Recipe title</label>
+                    <div class="mt-3 md-form form-lg">
+                        <label for="title" class="label">Recipe title</label>
                         <input type="text" id="title" name="title" value="" required class="form-control">
                     </div>
 
                     <!-- Recipe Description -->
-                    <div class="mt-2 md-form form-lg">
-                        <label for="description">Recipe description</label>
+                    <div class="mt-5 md-form form-lg">
+                        <label for="description" class="label">Recipe description</label>
                         <input type="text" id="description" name="description" value="" class="form-control">
                     </div>
                 </div>
 
-                <div class="input-field col-12 mt-2">
+                <div class="input-field col-12 mb-5">
                     <div class="flex-selection">
 
                         <!-- Dish Type -->
-                        <div class="input-field col-2">
-                            <label for="type">Dish type</label>
+                        <div class="input-field col-3">
+                            <label for="type" class="label">Dish type</label>
                             <select class="form-control" id="type" name="type" required>
                                 {% for cat in Categories %}
                                 <option value="{{cat.dish_type}}">{{cat.dish_type}}</option>
@@ -41,25 +41,25 @@
 
                         <!-- Servings -->
                         <div class="input-field col-2">
-                            <label for="recipe-serving">Serves</label>
+                            <label for="recipe-serving" class="label">Serves</label>
                             <input type="number" name="serves" id="recipe-serving" required class="form-control" min="0"/>
                         </div>
 
                         <!-- Preparation Time -->
                         <div class="input-field col-2">
-                            <label for="prep-time">Prep time</label>
+                            <label for="prep-time" class="label">Prep time</label>
                             <input type="text" name="prep-time" id="prep-time" required class="form-control" />
                         </div>
 
                         <!-- Cooking Time -->
                         <div class="input-field col-2">
-                            <label for="cooking-time">Cooking time</label>
+                            <label for="cooking-time" class="label">Cooking time</label>
                             <input type="text" name="cooking-time" id="cooking-time" required class="form-control" />
                         </div>
 
                         <!-- Difficulty level -->
-                        <div class="input-field col-2">
-                            <label for="difficulty">Level</label>
+                        <div class="input-field col-3">
+                            <label for="difficulty" class="label">Level</label>
                             <select class="form-control" id="difficulty" name="difficulty" required>
                                 {% for diff in difficulty %}
                                 <option value="{{diff.recipe_difficulty}}">{{diff.recipe_difficulty}}</option>
@@ -71,21 +71,21 @@
                     </div>
 
                     <!-- Recipe Ingredients -->
-                    <div class="col-10 btn-inline mt-2" id="TextBoxGroupIngredients">
+                    <div class="col-10 btn-inline mb-5" id="TextBoxGroupIngredients">
                         <div id="TextBoxIngredient">
-                            <label for="title">Ingredients (One ingredient for each line)</label>
-                                <div class="flex ">
-                                <input type="text" id="ingredient" name="ingredient" value=" " required class="form-control ">
-                                <a class="btn btn-sm" id="addIngredient" role="button"><i class="fas fa-plus " aria-hidden="true "></i></a>
+                            <label for="title" class="label">Ingredients (One ingredient for each line)</label>
+                                <div class="flex">
+                                <input type="text" id="ingredient" name="ingredient" value=" " required class="form-control">
+                                <a class="btn btn-sm" id="addIngredient" role="button"><i class="fas fa-plus" aria-hidden="true "></i></a>
                                 </div>
                         </div>
                     </div>
 
                     <!-- Recipe Instructions -->
-                    <div class="col-12 " id="TextBoxInstructions ">
-                        <div class="form-group " id="TextBoxInstruction ">
-                            <label for="recipe_instruction ">Instruction</label>
-                            <textarea class="form-control " id="TextBoxInstruction rows="10">
+                    <div class="col-12 mb-5" id="TextBoxInstructions">
+                        <div class="form-group" id="TextBoxInstruction">
+                            <label for="recipe_instruction" class="label">Instruction</label>
+                            <textarea class="form-control" id="TextBoxInstruction rows="10">
                             </textarea>
                         </div>
                     </div>
