--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" integrity="sha256-zmfNZmXoNWBMemUOo1XUGFfc0ihGGLYdgtJS3KCr/l0=" crossorigin="anonymous" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.11/css/mdb.min.css" rel="stylesheet">
     <!-- Custom Styling -->
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
 </head>
@@ -23,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="sideNav">
             <!-- Navbar Logo -->
-            <a class="navbar-brand js-trigger" href="{{url_for('home_page')}}">
+            <a class="navbar-brand" href="{{url_for('home_page')}}">
             <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="https://res.cloudinary.com/dbnahdjbc/image/upload/c_limit,h_100,w_150/v1571492467/A%20Chefs%20Book/images_lfcgfy.png" alt="Page logo">
         </a>
 
@@ -32,9 +33,9 @@
         </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-trigger" href="#">Browser</a></li>
-                    <li class="nav-item"><a class="nav-link js-trigger" href="#">Add Recipe</a></li>
-                    <li class="nav-item"><a class="nav-link js-trigger" href="#">Edit Recipe</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{url_for('all_recipes')}}">Browser</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{url_for('add_recipe')}}">Add Recipe</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Edit Recipe</a></li>
                 </ul>
             </div>
         </nav>
@@ -49,6 +50,7 @@
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js" integrity="sha256-fTuUgtT7O2rqoImwjrhDgbXTKUwyxxujIMRIK7TbuNU=" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
+<script type="text/javascript" src="{{url_for('static', filename='js/interact.js')}}"></script>
 
 
 
