--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -89,6 +89,17 @@
                             </textarea>
                         </div>
                     </div>
+                    
+                    <!-- Upload Image for recipe -->
+                    <div class="input-group mb-5 col-8">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+                        </div>
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+                            <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                        </div>
+                    </div>
 
                     <!-- Submit Recipe -->
                     <div class="submit-btns col-12">
