--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -91,14 +91,12 @@
                     </div>
                     
                     <!-- Upload Image for recipe -->
-                    <div class="input-group mb-5 col-8">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
-                        </div>
-                        <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
-                            <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-                        </div>
+                    <div class=" mb-5 col-8">
+                        <img src="https://www.industriehof.com/images/social/xing-24x24.png" id="img-preview" />
+                        <label class="file-upload-container" for="file-upload">
+                                <input id="file-upload" type="file" class="form-control">
+                            </label>
+                        
                     </div>
 
                     <!-- Submit Recipe -->
