Added functionality to submit button

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -10,7 +10,7 @@
 
     <div class="card shadow">
         <div class="card-body">
-            <form action "{{url_for('insert_recipe')}}" method="POST" class="add-recipe-form">
+            <form action="{{url_for('insert_recipe')}}" method="POST" class="add-recipe-form">
             
                 <div class=" col-12 mt-3 mb-5">
                     <!-- Recipe Title -->
