--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,10 @@
 .col-2,
 .col-3,
 .col-lg-3,
-.col-sm-4 {
+.col-sm-4,
+.col-md-3 {
   padding-left: 0;
+  padding-right: 0;
 }
 
 
@@ -149,9 +151,7 @@ body {
 
 @media (max-width: 991px){
   .card-deck {
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-direction: column;
     flex-direction: column;
   }
 }
@@ -166,6 +166,47 @@ body {
 
 
 
+
+/* Search Results */
+.search-result .fas {
+  font-size: medium;
+}
+
+.search-card img {
+  height: 200px;
+  width: 100%;
+  margin-left: 0;
+}
+  
+@media (max-width: 768px) and (min-width: 578px) {
+  .search-result {
+    margin-left: 25px;
+    margin-right: 25px;
+  }
+  .search-deck {
+    display: flex;
+    flex-direction: inherit;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  .search-card {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+    .search-card img {
+    height: 200px;
+    width: 100%;
+    margin-left: 0;
+  }
+}
+
+@media (min-width: 992px) {
+  .card img {
+    height: 250px;
+    width: 100%;
+    margin-left: 0;
+  }
+}
 
 
 
