Fix a typing error in the view recipe url

--- a/templates/browser_recipes.html
+++ b/templates/browser_recipes.html
@@ -58,7 +58,7 @@
 
         <!-- View Single Recipe -->
         <div class="submit-btns col-12">
-          <a class="btn btn-primary view-btn" role="button" href="{{url_for('single_recipe', recipe_id=recipe.id)}}">View Recipe</a>
+          <a class="btn btn-primary view-btn" role="button" href="{{url_for('single_recipe', recipe_id=recipe._id)}}">View Recipe</a>
         </div>
         
       </div>
