--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,7 @@ body {
   margin-top: 10rem;
   color: #868e96;
   background-color: #FEFCF8;
+  width: 100%;
 }
 
 
@@ -210,24 +211,6 @@ body {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Add Recipe */
 
 .shadow {
@@ -283,4 +266,21 @@ body {
     flex-direction: row;
     align-items: baseline;
   }
+}
+
+
+.instruction-editor {
+     display: block;
+    width: 100%;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: bor
 }
