Added missing quotation marks to cooking and preparation time input fields

--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -52,13 +52,13 @@
                         <!-- Preparation Time -->
                         <div class="input-field col-lg-2 col-sm-4 mobile-style">
                             <label for="preparation_time" class="label">Prep time</label>
-                            <input type="text" name="prep-time" id="preparation_time" required class="form-control" value="{{recipe.preparation_time}} />
+                            <input type="text" name="prep-time" id="preparation_time" required class="form-control" value="{{recipe.preparation_time}}"/>
                         </div>
 
                         <!-- Cooking Time -->
                         <div class="input-field col-lg-2 col-sm-4 mobile-style">
                             <label for="cooking_time" class="label">Cooking time</label>
-                            <input type="text" name="cooking-time" id="cooking_time" required class="form-control" value="{{recipe.cooking_time}} />
+                            <input type="text" name="cooking-time" id="cooking_time" required class="form-control" value="{{recipe.cooking_time}}"/>
                         </div>
 
                         <!-- Difficulty level -->
