--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -10,27 +10,27 @@
 
     <div class="card shadow">
         <div class="card-body">
-            <form action="{{url_for('insert_recipe')}}" method="POST" class="add-recipe-form" enctype="multipart/form-data">
+            <form action="{{url_for('insert_recipe')}}" method="POST" class="add-recipe-form">
             
-                <div class=" col-12 mt-3 mb-5">
+                <div class=" col-10 mt-3 mb-5">
                     <!-- Recipe Title -->
                     <div class="mt-3 md-form form-lg">
                         <label for="recipe_title" class="label">Recipe title</label>
-                        <input type="text" id="title" name="recipe_title" value="" required class="form-control">
+                        <input type="text" id="title" name="recipe_title" value="" required class="form-control" placeholder="e.g. Pasta carbonara">
                     </div>
 
                     <!-- Recipe Description -->
                     <div class="mt-5 md-form form-lg">
                         <label for="recipe_description" class="label">Recipe description</label>
-                        <input type="text" id="description" name="recipe_description" value="" class="form-control">
+                        <input type="text" id="description" name="recipe_description" value="" class="form-control" placeholder="e.g. Creamy pasta with bacon, spring onions and parmesan cheese">
                     </div>
                 </div>
 
-                <div class="input-field col-12 mb-5">
+                <div class="input-field col-10 mb-5">
                     <div class="flex-selection">
 
                         <!-- Dish Type -->
-                        <div class="input-field col-lg-3 col-sm-4 mobile-style">
+                        <div class="input-field col-lg-2 col-sm-4 mr-3 mobile-style">
                             <label for="dish_type" class="label">Dish type</label>
                             <select class="form-control" id="type" name="dish_type" required>
                                 {% for cat in Categories %}
@@ -40,25 +40,25 @@
                         </div>
 
                         <!-- Servings -->
-                        <div class="input-field col-lg-2 col-sm-4 mobile-style">
+                        <div class="input-field col-lg-1 col-sm-4 mr-3 mobile-style">
                             <label for="recipe_serving" class="label">Serves</label>
-                            <input type="number" name="serves" id="recipe_serving" required class="form-control" min="0"/>
+                            <input type="text" name="serves" id="recipe_serving" required class="form-control" min="1" placeholder="2">
                         </div>
 
                         <!-- Preparation Time -->
-                        <div class="input-field col-lg-2 col-sm-4 mobile-style">
+                        <div class="input-field col-lg-2 col-sm-4 mr-3 mobile-style">
                             <label for="preparation_time" class="label">Prep time</label>
-                            <input type="text" name="prep-time" id="preparation_time" required class="form-control" />
+                            <input type="text" name="prep-time" id="preparation_time" required class="form-control" placeholder="e.g. 10 miuntes">
                         </div>
 
                         <!-- Cooking Time -->
-                        <div class="input-field col-lg-2 col-sm-4 mobile-style">
+                        <div class="input-field col-lg-2 col-sm-4 mr-3 mobile-style">
                             <label for="cooking_time" class="label">Cooking time</label>
-                            <input type="text" name="cooking-time" id="cooking_time" required class="form-control" />
+                            <input type="text" name="cooking-time" id="cooking_time" required class="form-control" placeholder="e.g. 20 miuntes">
                         </div>
 
                         <!-- Difficulty level -->
-                        <div class="input-field col-lg-3 col-sm-4 mobile-style">
+                        <div class="input-field col-lg-2 col-sm-4 mobile-style">
                             <label for="recipe_difficulty" class="label">Level</label>
                             <select class="form-control" id="difficulty" name="recipe_difficulty" required>
                                 {% for diff in difficulty %}
@@ -77,7 +77,7 @@
                             <input type="text" id="ingredient" name="recipe_ingredients" value="" required class="form-control" placeholder="e.g. 2 medium chopped onions">
                                 <div class="row">
                                 <a class="btn btn-sm" id="addIngredient" role="button"><i class="fas fa-plus" aria-hidden="true"></i></a>
-                                <a class="btn btn-sm removeIngredientDiv" id="removeIngredient" role="button"><i class="fas fa-minus" aria-hidden="true "></i></a>
+                                <a class="btn btn-sm removeIngredientDiv" id="removeIngredient" role="button"><i class="fas fa-minus" aria-hidden="true"></i></a>
                                 </div>
                         </div>
                     </div>
@@ -89,17 +89,17 @@
                             <textarea class="form-control text-instr" id="recipe_instruction" name="recipe_instruction" type="text" placeholder="e.g. In a hot pan combine oil, onion and pepper and cook for 5 miuntes."></textarea>
                                 <div class="row">
                                 <a class="btn btn-sm" id="addInstruction" role="button"><i class="fas fa-plus" aria-hidden="true"></i></a>
-                                <a class="btn btn-sm removeInstructionDiv" id="removeInstruction" role="button"><i class="fas fa-minus" aria-hidden="true "></i></a>
+                                <a class="btn btn-sm removeInstructionDiv" id="removeInstruction" role="button"><i class="fas fa-minus" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
                     
                     <!-- Upload Image for recipe -->
-                    <div class=" mb-5 col-8">
+                    <div class="mb-5 col-8">
                         <img src="https://www.industriehof.com/images/social/xing-24x24.png" id="img-preview"/>
                             <div class="custom-file">
                             <input type="file" class="custom-file-input" id="image-upload">
-                            <label class="custom-file-label" for="recipe_image">Choose Image</label>
+                            <label class="custom-file-label" for="recipe_image">Choose image</label>
                             </div>
                     </div>
 
