--- a/static/css/style.css
+++ b/static/css/style.css
@@ -225,16 +225,26 @@ body {
   margin-bottom: inherit;
 }
 
-.flex {
-   display: flex;
-   flex-direction: row;
-   align-items: center;
+
+.btn-sm .fas {
+  color: #e25822;
+  font-size: medium;
 }
 
-.flex .fas {
-    color: #000;
-    font-size: medium;
-    padding: 10px;
+.instruction-editor {
+  display: block;
+  width: 100%;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  transition: bor
 }
 
 .submit-btns {
@@ -253,10 +263,10 @@ body {
 
 
 
-@media (max-width: 991px){
-.mobile-style {
-  margin-top: 48px;
-}
+@media (max-width: 991px) {
+  .mobile-style {
+    margin-top: 48px;
+  }
 }
 
 
@@ -266,21 +276,14 @@ body {
     flex-direction: row;
     align-items: baseline;
   }
+  .card img {
+    height: 200px;
+    width: 200px;
+    margin-left: 0;
+  }
 }
 
 
-.instruction-editor {
-     display: block;
-    width: 100%;
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: .25rem;
-    transition: bor
-}
+
+
+
