Corrected the recipe title to recipe name

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -15,8 +15,8 @@
                 <div class="col-10 mt-3 mb-5">
                     <!-- Recipe Title -->
                     <div class="mt-3 md-form form-lg">
-                        <label for="recipe_title" class="label">Recipe title</label>
-                        <input type="text" id="title" name="recipe_title" value="" required class="form-control" placeholder="e.g. Pasta carbonara">
+                        <label for="recipe_name" class="label">Recipe name</label>
+                        <input type="text" id="title" name="recipe_name" value="" required class="form-control" placeholder="e.g. Pasta carbonara">
                     </div>
 
                     <!-- Recipe Description -->
