Fixed Cancel button

--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -121,7 +121,7 @@
                     <!-- Submit Recipe -->
                     <div class="submit-btns col-12">
                         <input class="btn btn-primary submit-btn" type="submit" value="Submit" id="submit">
-                        <a class="btn btn-primary cancel-btn" role="button" href="#">Cancel</a>
+                        <a class="btn btn-primary cancel-btn" href="{{url_for('browser_recipes')}}">Cancel</a>
                     </div>
             
             </form>
