--- a/templates/single_recipe.html
+++ b/templates/single_recipe.html
@@ -11,10 +11,10 @@
 
 		<ul class="list-unstyled list-inline rating mb-0 text-center>
 					<li class=" list-inline-item mr-0 "><i class="fas fa-user "></i><span>{{recipe.dish_type}}</span></li>
+					<li class=" list-inline-item mr-0 "><i class="fas fa-user "></i><span>{{recipe.recipe_serving}}</span></li>
 					<li class="list-inline-item mr-0 "><i class="fas fa-clock "></i><span>{{recipe.preparation_time}}</span></li>
 					<li class="list-inline-item mr-0 "><i class="fas fa-stopwatch "></i><span>{{recipe.cooking_time}}</span></li>
 					<li class="list-inline-item mr-0 "><i class="fas fa-signal "></i><span>{{recipe.recipe_difficulty}}</span></li>
-					<li class="list-inline-item mr-0 "><i class="fas fa-star "></i><span>{{recipe.recipe_rating}}</span></li>
 				</ul>
 		
 		<hr>
@@ -46,8 +46,8 @@
 	
 	<!-- Submit Recipe -->
 	<div class="submit-btns col-12 ">
-		<a class="btn btn-primary submit-btn " role="button " href="{{url_for('edit_recipe', recipe_id=recipe._id)}}">Edit</a>
-		<a class="btn btn-primary cancel-btn " role="button " id="deleteConfirm ">Delete</a>
+		<a class="btn btn-primary submit-btn" id="editButton" href="{{url_for('edit_recipe', recipe_id=recipe._id)}}">Edit</a>
+		<a class="btn btn-primary cancel-btn deleteConfirm" role="button" id="deleteConfirm" href="{{url_for('delete_recipe', recipe_id=recipe._id)}}">Delete</a>
 	</div>   
 	
 </div>
