--- a/templates/all_recipes.html
+++ b/templates/all_recipes.html
@@ -1,74 +1,58 @@
 {% extends 'base.html' %}
-{% block content %}
+{% block view_all %}
 
-
-    
 <!-- Browser Card -->
-<div class="intro-home col-lg-6 offset-lg-4">
-    
-<!-- Card image -->
+  <div class="intro-home col-lg-6 offset-lg-4">
+  
+    <!-- Card image -->
     <div class="card-image">
-        <img class="img-fluid" src="https://res.cloudinary.com/dbnahdjbc/image/upload/v1571576090/A%20Chefs%20Book/Using-in-season-Fall-harvest-foods-in-your-meals-helps-save-money-and-add-a-huge-health-benefit.-Get-great-tips-and-recipes-at-Made-in-a-Pinch-and-follow-us-on-Pinterest1-min_brnfuq.png"
-            alt="Home Image">
+      <img class="img-fluid" src="https://res.cloudinary.com/dbnahdjbc/image/upload/v1571576090/A%20Chefs%20Book/Using-in-season-Fall-harvest-foods-in-your-meals-helps-save-money-and-add-a-huge-health-benefit.-Get-great-tips-and-recipes-at-Made-in-a-Pinch-and-follow-us-on-Pinterest1-min_brnfuq.png"
+        alt="Home Image">
     </div>
-    
-<!--Card Text-->
+  
+    <!--Card Text-->
     <div class="card-home text-center">
-        <h5 class="card-title"><strong></strong>A Chef's Book</h5>
-        <p class="card-text">Where you can find a collection of recipes</p>
+      <h5>Search for a recipe</h5>
+      <!-- Search form -->
+      <form class="form-inline md-form form-sm mt-0" action="{{url_for('search_bar')}}" method="POST">
+        <i class="fas fa-search" aria-hidden="true" for="submit-form"></i>
+        <input class="form-control form-control-sm ml-3 w-75" type="text" name="search_text" placeholder="Search" aria-label="Search" required>
+      </form>
     </div>
-</div>
-
-
-
-<!-- Favorite Recipes -->
-<div class="fav-recipes col-lg-8 offset-lg-2">
-    <div class="fav-header mt-5 mb-5">
-        <h3>Favorite Recipe's</h3>
-    </div>
-
-<!-- Card deck -->
-
-<div class="card-deck ">
-
-  <!-- Card -->
-  {% for recipe in recipes |slice(2,6) %}
-  
-  <div class="card mb-4">
-  
-    <!--Card image-->
-    <div class="view overlay">
-      
-      <img class="card-img-top" src="{{recipe.recipe_image}}" alt="Card image cap">
-      <a href="#!">
-        <div class="mask rgba-white-slight"></div>
-      </a>
-      
-    </div>
-
-    <!--Card content-->
-    <div class="card-body">
-
-      <!--Title-->
-      <h4 class="card-title">{{recipe.recipe_name}}</h4>
-      <h5 class="card-title">{{recipe.dish_type}}</h5>
-      <!--Text-->
-      <p class="card-text>{{recipe.recipe_description}}</p>
-      <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-      <button type="button" class="btn btn-light-blue btn-md">Read more</button>
-
-    </div>
-
   </div>
-  
+
+
+
+
+<!-- Recipe Cards -->
+<div class="all-recipes col-lg-10 offset-lg-2">
+
+<section class="all-cards">
+  {% for recipe in recipes %}
+  <div class="card-container">
+    <div class="recipe">
+        <div class="recipe-image">
+          <img src="{{recipe.recipe_image}}" alt="recipe-image">
+        </div>
+        <div class="description">
+          <h5 class="text-center pt-2">{{recipe.recipe_name}}</h5>
+          <hr>
+          <!-- Recipe details-->
+          <ul class="browser-recipe-icons list-unstyled">
+            <li class="fav-details-list"><i class="fas fa-user "></i><span>{{recipe.dish_type}}</span></li>
+            <li class="fav-details-list"><i class="fas fa-clock "></i><span>{{recipe.preparation_time}}</span></li>
+            <li class="fav-details-list"><i class="fas fa-stopwatch "></i><span>{{recipe.cooking_time}}</span></li>
+            <li class="fav-details-list"><i class="fas fa-signal "></i><span>{{recipe.recipe_difficulty}}</span></li>
+          </ul>
+        </div>
+        <!-- View Single Recipe -->
+        <div class="submit-btns col-12">
+          <a class="btn btn-primary view-btn" role="button" href="{{url_for('single_recipe', recipe_id=recipe._id)}}">View Recipe</a>
+        </div>
+    </div>
+  </div>
   {% endfor %}
-  <!-- Card -->
+</section>  
 </div>
-</div>
-<!-- Card deck -->
-
-
-
-
 
 {% endblock %}
