--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,10 +87,14 @@
  .recipe-card {
      background: #fff;
      width: 100%;
+     padding: 20px 40px;
+     border: 1px solid #ced4da;
+     -webkit-box-shadow: 0px 10px 11px -5px rgba(0, 0, 0, 0.22);
+     box-shadow: 0px 10px 11px -5px rgba(0, 0, 0, 0.22);
 }
  .fas {
      color: #e25822;
-     font-size: xx-large;
+     font-size: large;
      padding: 10px;
 }
  .recipe-ingredients, .recipe-instructions {
@@ -117,6 +121,9 @@
      .card-deck {
          display: flex;
          flex-direction: column;
+    }
+    .single-recipe-img {
+     display: none;
     }
 }
  @media (min-width: 992px) {
@@ -242,7 +249,7 @@
 }
 
 .recipe {
- width: 90%;
+ width: 300px;
  margin: 0.5em auto;
  background-color: #fff;
  border: 1px solid #ced4da;
