Change Intro Image

--- a/templates/all_recipes.html
+++ b/templates/all_recipes.html
@@ -6,8 +6,8 @@
   
     <!-- Card image -->
     <div class="card-image">
-      <img class="img-fluid" src="https://res.cloudinary.com/dbnahdjbc/image/upload/v1571576090/A%20Chefs%20Book/Using-in-season-Fall-harvest-foods-in-your-meals-helps-save-money-and-add-a-huge-health-benefit.-Get-great-tips-and-recipes-at-Made-in-a-Pinch-and-follow-us-on-Pinterest1-min_brnfuq.png"
-        alt="Home Image">
+      <img class="img-fluid" src="https://res.cloudinary.com/dbnahdjbc/image/upload/v1572463755/A%20Chefs%20Book/1717f981-670a-4306-bbfd-4657d2dd97e9_zkktwv.jpg"
+        alt="View All Image">
     </div>
   
     <!--Card Text-->
