--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 			<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="sideNav">
 			<!-- Navbar Logo -->
 			<a class="navbar-brand" href="{{url_for('home_page')}}">
-			<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="https://res.cloudinary.com/dbnahdjbc/image/upload/c_limit,h_100,w_150/v1571492467/A%20Chefs%20Book/images_lfcgfy.png" alt="Page logo">
+			<img class="img-fluid img-profile rounded-circle mx-auto mb-2 nav-logo" src="https://res.cloudinary.com/dbnahdjbc/image/upload/c_limit,h_100,w_150/v1571492467/A%20Chefs%20Book/images_lfcgfy.png" alt="Page logo">
 			</a>
 			<!-- Navbar Navigators -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
