Change the intro image

--- a/templates/all_recipes.html
+++ b/templates/all_recipes.html
@@ -6,7 +6,8 @@
   
     <!-- Card image -->
     <div class="card-image">
-      <img class="img-fluid" src="https://res.cloudinary.com/dbnahdjbc/image/upload/v1572463755/A%20Chefs%20Book/1717f981-670a-4306-bbfd-4657d2dd97e9_zkktwv.jpg"
+      <!-- Credits to the following for the image: Country Living -->
+      <img class="img-fluid" src="https://res.cloudinary.com/dbnahdjbc/image/upload/v1573481881/A%20Chefs%20Book/landscape-1504710985-picmonkey-collage_wjdibz.jpg"
         alt="View All Image">
     </div>
   
