Added credits to intro image

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
         
         <!-- Card image -->
         <div class="card-image">
+            <!-- Credits to the following for the image: Made in a Pinch  -->
             <img class="img-fluid" src="https://res.cloudinary.com/dbnahdjbc/image/upload/v1571576090/A%20Chefs%20Book/Using-in-season-Fall-harvest-foods-in-your-meals-helps-save-money-and-add-a-huge-health-benefit.-Get-great-tips-and-recipes-at-Made-in-a-Pinch-and-follow-us-on-Pinterest1-min_brnfuq.png"
                 alt="Home Image">
         </div>
